added the buttons
the buttons either add the car to your list of dream cars, or it
ignores and discards the photo… The cars still repeat themselves during
the voting stage, but that is the next item to fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,43 @@ body {
 a {
   color: #00B7FF;
 }
+
+p{
+	margin:30px 0px 0px 0px;
+	padding-top:30px;
+	font-size:32px;
+	font-family:arial;
+}
+footer{
+	margin-top: 50px;
+}
+.footer{
+	font-size:18px;
+}
+img{
+	width: 600px;
+	margin:20px auto;
+}
+
+#button-container{
+	margin:20px;
+
+}
+#button-container .btn{
+	margin:20px;
+	width:250px;
+	height:40px;
+	font-size: 20px;
+
+}
+#content-container{
+	background-color: #cf5300;
+	border-radius: 20px;
+	margin:auto;
+	padding-bottom: 30px;
+	width:800px;
+	text-align: center;
+}
+.vote-button{
+	display:inline;
+}
