--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">&reg 2015 Frederick Calk</p>
+<p class="footer text-center text-muted">&copy 2015 Frederick Calk</p>
