--- a/views/head.ejs
+++ b/views/head.ejs
@@ -6,4 +6,5 @@
 	<title>NodeJS - Electric or Not voting app</title>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
+	<script src="/javascripts/script.js"></script>
 </head>
