--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,9 +1,8 @@
 <nav class="nav navbar-default" rolo="navigation">
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
-			<li><a class="active" href="./"><span class="glyphicon glyphicon-print"></span>Vote</a></li>
-			<li><a class="active" href="./"><span class="glyphicon glyphicon-alt"></span>Standings</a></li>
+			<li><a class="active" href="./"><span class="glyphicon glyphicon-check"></span> Add/Remove</a></li>
+			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-list-alt"></span> Full List</a></li>
 		</ul>
 	</div>
-
 </nav>
