--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,25 @@
-<% include ../views/head %>
+<% include head %>
 
 <body>
 	<header>
 		<% include header %>
 	</header>
+<div id="content-container">
+	<p>Is this one of your Dream Cars?</p>
 
-	<p>Here is the body!!</p>
-<%
-	for(i=0;i<photo.length;i++){
-%>
-	<img src="<%= photo[i].name%>">
-<%
-	}
-%>
-
+	<h2><%= photo.name %></h2>
+	<img src="<%= photo.src%>">
+	<div id="button-container">
+	<form class = "vote-button" action="./favorites" method="post">
+		<input type="hidden" name = "src" value="<%=photo.src%>">
+		<input type="submit" class="btn btn-success" value="Add to List">
+	</form>
+	<form class="vote-button" action="./pass" method="post">
+		<input type="hidden" name = "src" value="<%=photo.src%>">
+		<input type="submit" class="btn btn-danger" value="No Way!">
+	</form>
+	</div>
+</div>
 	<footer>
 		<% include footer %>
 	</footer>
