added 2 new pages
1 of the new pages shows all of the cars that are available in the
database to be voted on, and the other new page shows all of the cars
that were voted against

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,11 @@
 <nav class="nav navbar-default" rolo="navigation">
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
-			<li><a class="active" href="./"><span class="glyphicon glyphicon-check"></span> Add/Remove</a></li>
-			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-list-alt"></span> Full List</a></li>
+			<li><a class="active" href="./"><span class="glyphicon glyphicon-check"></span> Vote</a></li>
+			<li><a class="active" href="/list"><span class="glyphicon glyphicon-list-alt"></span> Full List</a></li>
+			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-thumbs-up"></span> Favorites List</a></li>
+			<li><a class="active" href="/losers"><span class="glyphicon glyphicon-trash"></span> Dump</a></li>
+			
 		</ul>
 	</div>
 </nav>
