--- a/views/losers.ejs
+++ b/views/losers.ejs
@@ -5,7 +5,7 @@
 		<% include header %>
 	</header>
 <div id="content-container">
-	<p>Favorite Cars</p>
+	<p>Discarded Cars</p>
 <%
 	for(i=0;i<photos.length;i++){
 %>
