--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,16 @@
 	<img src="<%= photo.src%>">
 	<div id="button-container">
 	<form class = "vote-button" action="./favorites" method="post">
+		<input type="hidden" name = "vote" value="<%='favorites'%>">
 		<input type="hidden" name = "name" value="<%=photo.name%>">
 		<input type="hidden" name = "src" value="<%=photo.src%>">
 		<input type="submit" class="btn btn-success" value="Add to List">
 	</form>
-	<form class="vote-button" action="./pass" method="post">
+	<form class="vote-button" action="./favorites" method="post">
+		<input type="hidden" name = "vote" value="<%='pass'%>">
 		<input type="hidden" name = "name" value="<%=photo.name%>">
 		<input type="hidden" name = "src" value="<%=photo.src%>">
-		<input type="submit" class="btn btn-danger" value="No Way!">
+		<input type="submit" class="btn btn-danger" value="Trash">
 	</form>
 	</div>
 </div>
