added addition form
any user can now add their own cars to the database

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
 			<li><a class="active" href="/list"><span class="glyphicon glyphicon-list-alt"></span> Full List</a></li>
 			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-thumbs-up"></span> Favorites List</a></li>
 			<li><a class="active" href="/losers"><span class="glyphicon glyphicon-trash"></span> Dump</a></li>
+			<li><a class="active" href="/add"><span class="glyphicon glyphicon-list-alt"></span> Add Car</a></li>
 			
 		</ul>
 	</div>
