--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>NodeJS - Electric or Not voting app</title>
+	<title>NodeJS - Favorite Car Voting App</title>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 	<script src="/javascripts/script.js"></script>
