added logic for standings
adding car to dream cars up votes the car, and passing on it down votes
the car. The standings page will display all of the cars in order

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -5,8 +5,8 @@
 		<% include header %>
 	</header>
 <div id="content-container">
-	<p> Add Your Own Cars </p>
-	<form action="./add" method="post">
+	<p> Add Your Own Car </p>
+	<form id="addition-form" action="./add" method="post">
 		<input id="carName" type="text" placeholder="Car Name..." name = "name">
 		<input id="imageSrc" type="text" placeholder="Image URL" name = "src">
 		<input class="btn btn-primary" type="submit">
