--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,10 +2,10 @@
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
 			<li><a class="active" href="./"><span class="glyphicon glyphicon-check"></span> Vote</a></li>
-			<li><a class="active" href="/list"><span class="glyphicon glyphicon-list-alt"></span> Full List</a></li>
-			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-thumbs-up"></span> Favorites List</a></li>
-			<li><a class="active" href="/losers"><span class="glyphicon glyphicon-trash"></span> Dump</a></li>
-			<li><a class="active" href="/add"><span class="glyphicon glyphicon-list-alt"></span> Add Car</a></li>
+			<li><a class="active" href="/list"><span class="glyphicon glyphicon-list-alt"></span> Standings</a></li>
+			<li><a class="active" href="/favorites"><span class="glyphicon glyphicon-thumbs-up"></span> Your Favorites</a></li>
+			<li><a class="active" href="/losers"><span class="glyphicon glyphicon-trash"></span> Your Dump</a></li>
+			<li><a class="active" href="/add"><span class="glyphicon glyphicon-upload"></span> Upload New Car</a></li>
 			
 		</ul>
 	</div>
