--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 		<input type="hidden" name = "src" value="<%=photo.src%>">
 		<input type="submit" class="btn btn-success" value="Add to List">
 	</form>
-	<form class="vote-button" action="./favorites" method="post">
+	<form class="vote-button" action="./losers" method="post">
 		<input type="hidden" name = "vote" value="<%='pass'%>">
 		<input type="hidden" name = "name" value="<%=photo.name%>">
 		<input type="hidden" name = "src" value="<%=photo.src%>">
