--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,3 +52,16 @@ img{
 .vote-button{
 	display:inline;
 }
+#addition-form #carName, #addition-form #imageSrc{
+	width:80%;
+	height:50px;
+	margin:20px;
+	padding:10px;
+	border-radius:10px;
+}
+#addition-form .btn{
+	width:80%;
+	margin-top: 20px;
+	height: 50px;
+	border-radius:10px;
+}
