made some minor changes
consolidated the post modules into 1 bigger module

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
 %>
 	
 	<img src="<%=photos[i].src%>"
-	<h3 class="car-name"><%=photos[i].name%></h3>
+	<h3 class="car-name"><%=photos[i].name%> Votes: <%=photos[i].totalVotes%></h3>
 <%
 	}
 %>
