updated the database
added more information that is tied to each car, so each image has a
year, make, and model

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,7 @@ img{
 .vote-button{
 	display:inline;
 }
-#addition-form #carName, #addition-form #imageSrc{
+#addition-form .carName, #addition-form #imageSrc{
 	width:80%;
 	height:50px;
 	margin:20px;
